projet_gl/src/test/deca/context/valid/3_07/3_07_2_DeclField.deca
// Description:
//    Decl Field With NoInitialization
//
// Resultats:
//    ok
// Historique:
//    cree le 17/01/2024

class A {
    int field1;
}