projet_gl/src/test/deca/context/invalid/2_05/2_05_3_DeclField.deca
// Description:
//    Problème de redéclaration de champ
//
// Resultats:
//    Ligne 14: 
// 
// Historique:
//    cree le 17/01/2024

class A {
    int fieldOne;
    boolean fieldOne;
}
